--- a/portfolio_optimization_playground.ipynb
+++ b/portfolio_optimization_playground.ipynb
@@ -132,8 +132,7 @@
     "  \"optimizer\":COBYLA,\n",
     "  \"maxiter\":100,\n",
     "  \"depth\":1,\n",
-    "  \"alpha\":0.35,\n",
-    "  \"penalty\": 2*n\n",
+    "  \"alpha\":0.35\n",
     "}"
    ]
   },
@@ -398,8 +397,7 @@
     "  \"optimizer\":COBYLA,\n",
     "  \"maxiter\":100,\n",
     "  \"depth\":1,\n",
-    "  \"alpha\":0.35,\n",
-    "  \"penalty\": 2*n\n",
+    "  \"alpha\":0.35\n",
     "}"
    ]
   },
@@ -1159,8 +1157,7 @@
     "  \"optimizer\":COBYLA,\n",
     "  \"maxiter\":100,\n",
     "  \"depth\":1,\n",
-    "  \"alpha\":0.35,\n",
-    "  \"penalty\": 2*n\n",
+    "  \"alpha\":0.35\n",
     "}"
    ]
   },
