--- a/etf_optimization.ipynb
+++ b/etf_optimization.ipynb
@@ -97,13 +97,13 @@
     "subject to:\n",
     "\n",
     "$\\begin{aligned}\n",
-    "\\ \\sum_{i=0}^{n} S^T x \\le B,\\quad x \\in \\mathbb{N}^n,\\quad S \\in \\mathbb{R}^n,\\quad B \\in \\mathbb{R} \\qquad \\approx_{\\big|Variance(S) \\to 0}  \\qquad \\sum_{i=0}^{n} x \\le \\left\\lfloor \\frac{1}{\\overline{S}}B \\right\\rfloor,\\quad x \\in \\mathbb{N}^n,\\quad \\lfloor.\\rfloor \\in \\mathbb{N}\\\\\n",
+    "\\ \\sum_{i=0}^{n} S^T x \\le B,\\quad x \\in \\mathbb{N}^n,\\quad S \\in \\mathbb{R}^n,\\quad B \\in \\mathbb{R} \\qquad \\approx_{k \\to \\\\infinity}  \\qquad \\sum_{i=0}^{n} ceil( \\frac{k}{\\overline{S}}s_i) x_i \\le floor(\\frac{k}{\\overline{S}}B) ,\\quad k \\in \\mathbb{R},\\quad ceil(.), floor(.) \\in \\mathbb{N}\\\\\n",
     "\\end{aligned}$\n",
     "\n",
-    "integer to binary variable change:\n",
+    "integer variables $x_i$ bounded to:\n",
     "\n",
     "$\\begin{aligned}\n",
-    "\\ x = \\sum_{i=0}^{log_{2}(\\frac{1}{\\overline{S}}B)}2^iy_i,\\quad y \\in \\{0,1\\}\n",
+    "0 \\le x_i \\le 2^{floor(log_{2}(\\frac{B}{\\min_{j}{s_j}}))}-1\n",
     "\\end{aligned}$\n",
     "\n",
     "where we use the following notation:\n",
@@ -113,9 +113,11 @@
     "- $\\mu \\in \\mathbb{R}^n$ defines the expected returns for the assets,\n",
     "- $\\Sigma \\in \\mathbb{R}^{n \\times n}$ specifies the covariances between the assets,\n",
     "- $q > 0$ controls the risk appetite of the decision maker,\n",
-    "- $S$ defined as the prices related to the stock ( $\\overline{S}$ is the mean of the prices),\n",
+    "- $S$ defined as the prices related to the (grouped) stocks ( $\\overline{S}$ is the mean of the prices),\n",
     "- $B$ denotes the budget, i.e. the maximum amount of money to be spent purchasing assets.\n",
-    "- $\\lfloor.\\rfloor$ is the integer part operator\n"
+    "- $ceil$ is the operator that rounds up to the nearest integer\",\n",
+    "- $floor$ is the operator that rounds down to the nearest integer\",\n",
+    "- $k$ is a scaling factor used to tune the precision of the conversions to integer\n"
    ]
   },
   {
@@ -187,7 +189,7 @@
     }
    ],
    "source": [
-    "budget_bits = int(log(budget/np.min(s),2)) #TODO: thus, the min is used, not the mean as by the documentation?\n",
+    "budget_bits = int(np.log2(budget/np.min(s))) #TODO: int rounds down. I guess this is just excluding high volatility solutions.\n",
     "print(\"Budget variables per asset:\", budget_bits)"
    ]
   },
@@ -216,34 +218,17 @@
     "# create docplex model\n",
     "mdl = Model('portfolio_optimization')\n",
     "\n",
+    "x = mdl.integer_var_list((f'x{i}' for i in range(n)), lb=0, ub=2**budget_bits-1)\n",
     "\n",
-    "# creating variables y{n}_{budget_bits} in order to encode the binary decomposition of x\n",
-    "y_var = mdl.binary_var_list('y{}_{}'.format(i, j) for i in range(n) for j in range(budget_bits))\n",
+    "objective = mdl.sum([mu[i]*x[i] for i in range(n)])\n",
+    "objective -= q * mdl.sum([sigma[i,j]*x[i]*x[j] for i in range(n) for j in range(n)])\n",
     "\n",
-    "y = np.zeros([n, budget_bits])\n",
-    "y = y.astype('object')\n",
-    "\n",
-    "var_location = np.zeros([n, budget_bits])\n",
-    "var_location = var_location == 0\n",
-    "\n",
-    "y[var_location] = y_var # to matrix [n, budget_bits]\n",
-    "\n",
-    "# defining objective function\n",
-    "objective = mdl.sum([mu[i]*\n",
-    "                     mdl.sum([(2**k)*y[i][k] for k in range(budget_bits)])  # x_{n=i}\n",
-    "                     for i in range(n)])\n",
-    "objective -= q * mdl.sum([sigma[i,j]*\n",
-    "                          mdl.sum([(2**k)*y[i][k] for k in range(budget_bits)])* # x_{n=j}\n",
-    "                          mdl.sum([(2**k)*y[j][k] for k in range(budget_bits)]) # x_{n=i}\n",
-    "                          for i in range(n) for j in range(n)])\n",
     "mdl.maximize(objective)\n",
     "\n",
-    "# defining contraint\n",
-    "# as we have equalizer prices, we can aprox the price as 1, and the budget as divided by mean \n",
-    "bb = int(budget/s.mean())\n",
-    "mdl.add_constraint(mdl.sum(\n",
-    "    mdl.sum([(2**k)*y[i][k] for k in range(budget_bits)]) # x_{n=i}\n",
-    "    for i in range(n)) <= bb)\n",
+    "k = 7\n",
+    "norm = s.mean()/k\n",
+    "mdl.add_constraint(mdl.sum(x[i] * math.ceil(s[i]/norm) for i in range(n)) <= math.floor(budget/norm))\n",
+    "\n",
     "\n",
     "# import the classical optimizer\n",
     "from qiskit.aqua.components.optimizers import COBYLA\n",
