--- a/etf_optimization.ipynb
+++ b/etf_optimization.ipynb
@@ -97,7 +97,7 @@
     "subject to:\n",
     "\n",
     "$\\begin{aligned}\n",
-    "\\ \\sum_{i=0}^{n} S^T x \\le B,\\quad x \\in \\mathbb{N}^n,\\quad S \\in \\mathbb{R}^n,\\quad B \\in \\mathbb{R} \\qquad \\approx_{k \\to \\\\infinity}  \\qquad \\sum_{i=0}^{n} ceil( \\frac{k}{\\overline{S}}s_i) x_i \\le floor(\\frac{k}{\\overline{S}}B) ,\\quad k \\in \\mathbb{R},\\quad ceil(.), floor(.) \\in \\mathbb{N}\\\\\n",
+    "\\ \\sum_{i=0}^{n} S^T x \\le B,\\quad x \\in \\mathbb{N}^n,\\quad S \\in \\mathbb{R}^n,\\quad B \\in \\mathbb{R} \\qquad \\approx_{k \\to \\infty}  \\qquad \\sum_{i=0}^{n} ceil( \\frac{k}{\\overline{S}}s_i) x_i \\le floor(\\frac{k}{\\overline{S}}B) ,\\quad k \\in \\mathbb{R},\\quad ceil(.), floor(.) \\in \\mathbb{N}\\\\\n",
     "\\end{aligned}$\n",
     "\n",
     "integer variables $x_i$ bounded to:\n",
